--- a/src/vstboard/views/configdialog.ui
+++ b/src/vstboard/views/configdialog.ui
@@ -177,7 +177,7 @@
     </widget>
    </item>
    <item row="2" column="1">
-    <widget class="QGroupBox" name="groupBox_2">
+    <widget class="QGroupBox" name="groupSampleFormat">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
        <horstretch>0</horstretch>
